Add greeting messages

--- a/index2.html
+++ b/index2.html
@@ -6,11 +6,12 @@
 </head>
 
 <body>
+    <h1>Hello World</h1>
     <div id="root">
         <p>Hej</p>
     </div>
 
-
+    <h2>Goodbye</h2>
     <script>
         const images = [
             {
